# pdf_ocr

./: .gitignore  README.md  README_CN.md  cli.py  main.py  my_ocr.py  my_ocr.sh  ocr_example.py  pdf_ocr.sh  pyproject.toml
