[project]
name = "my-ocr"
version = "0.1.0"
description = "基于 Mistral AI 的 PDF 文档光学字符识别（OCR）工具"
authors = [
    {name = "AI Assistant", email = "ai@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mistralai>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
my-ocr = "my_ocr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
