[project]
name = "pdf-ocr"
version = "0.1.0"
description = "PDF OCR - 基于 Mistral AI 的 PDF 文档光学字符识别工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mistralai>=1.7.0",
    "typer>=0.9.0",
]

[project.scripts]
pdf-ocr = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
